cmake_minimum_required(VERSION 3.26)
project(plotmax2510)

set(CMAKE_CXX_STANDARD 17)

add_subdirectory(${PROJECT_SOURCE_DIR}/Q0590-N-aryTreePostorderTraversal)
add_subdirectory(${PROJECT_SOURCE_DIR}/Q0594-LongestHarmoniousSubsequence)
add_subdirectory(${PROJECT_SOURCE_DIR}/Q0599-MinimumIndexSumOfTwoLists)
add_subdirectory(${PROJECT_SOURCE_DIR}/Q0605-CanPlaceFlowers)
add_subdirectory(${PROJECT_SOURCE_DIR}/Q0617-MergeTwoBinaryTrees)
add_subdirectory(${PROJECT_SOURCE_DIR}/Q0628-MaximumProductOfThreeNumbers)
add_subdirectory(${PROJECT_SOURCE_DIR}/Q0637-AverageOfLevelsInBinaryTree)
add_subdirectory(${PROJECT_SOURCE_DIR}/Q0643-MaximumAverageSubarrayI)
add_subdirectory(${PROJECT_SOURCE_DIR}/Q0653-TwoSumIV-InputIsABST)
add_subdirectory(${PROJECT_SOURCE_DIR}/Q0657-RobotReturnToOrigin)
add_subdirectory(${PROJECT_SOURCE_DIR}/Q0661-ImageSmoother)
add_subdirectory(${PROJECT_SOURCE_DIR}/Q0671-SecondMinimumNodeInABinaryTree)
add_subdirectory(${PROJECT_SOURCE_DIR}/Q0674-LongestContinuousIncreasing)
add_subdirectory(${PROJECT_SOURCE_DIR}/Q0680-ValidPalindromeII)
add_subdirectory(${PROJECT_SOURCE_DIR}/Q0682-BaseballGame)
add_subdirectory(${PROJECT_SOURCE_DIR}/Q0693-BinaryNumberWithAlternatingBits)
add_subdirectory(${PROJECT_SOURCE_DIR}/Q0696-CountBinarySubstrings)
add_subdirectory(${PROJECT_SOURCE_DIR}/Q0697-DegreeOfAnArray)
add_subdirectory(${PROJECT_SOURCE_DIR}/Q0700-SearchInABinarySearchTree)
add_subdirectory(${PROJECT_SOURCE_DIR}/Q0703-KthLargestElementInAStream)
add_subdirectory(${PROJECT_SOURCE_DIR}/Q0704-BinarySearch)
add_subdirectory(${PROJECT_SOURCE_DIR}/Q0705-DesignHashSet)
add_subdirectory(${PROJECT_SOURCE_DIR}/Q0706-DesignHashMap)
add_subdirectory(${PROJECT_SOURCE_DIR}/Q0709-ToLowerCase)
add_subdirectory(${PROJECT_SOURCE_DIR}/Q0717-1-bitAnd2-bitCharacters)
add_subdirectory(${PROJECT_SOURCE_DIR}/Q0724-FindPivotIndex)
add_subdirectory(${PROJECT_SOURCE_DIR}/Q0728-SelfDividingNumbers)
add_subdirectory(${PROJECT_SOURCE_DIR}/Q0733-FloodFill)

